Fixed all tests. Finished readAssignment refactoring.